deployment/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: garage-ns
  labels:
    istio-injection: enabled
