deployment/fortio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-deploy
  namespace: garage-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: fortio
    spec:
      containers:
      - name: fortio
        image: fortio/fortio:latest_release
        imagePullPolicy: Always
        ports:
        - containerPort: 8180
          name: http-fortio
        - containerPort: 8179
          name: grpc-ping
