deployment/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: garage-gateway
  namespace: garage-ns
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: custom-gateway
#   namespace: garage-ns
# spec:
#   hosts:
#   - "*"  # Accept traffic for any host
#   gateways:
#   - garage-gateway  # Reference the Istio Gateway
#   http:
#   - route:
#      - destination:
#           host: gateway-service  # Replace with your custom gateway's service name
#           port:
#             number: 8999  # Port of your custom gateway service

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: custom-gateway
spec:
  hosts:
    - "*" # Accept traffic for any host (or specify your domain if needed)
  gateways:
    - garage-gateway # Reference the Istio Gateway created earlier
  http:
    - match:
        - uri:
            prefix:
              /ui
              # Match traffic with the /ui prefix
      route:
        - destination:
            host: client-service # Default Istio Gateway Service
            port:
              number: 8080 # Port of the Istio default gateway
    - match:
        - uri:
            prefix: / # Route all traffic
      route:
        - destination:
            host: gateway-service # Replace with your gateway service name
            port:
              number: 8999 # Match your service's exposed port


  # - match:
  #     - uri:
  #         prefix: /ui  # Match traffic with the /ui prefix
  #   route:
  #     - destination:
  #         host: istio-ingressgateway.istio-system.svc.cluster.local  # Default Istio Gateway Service
  #         port:
  #           number: 80  # Port of the Istio default gateway
  # - match:
  #     - uri:
  #         prefix: /  # Match all other traffic
  #   route:
  #     - destination:
  #         host: gateway-service  # Replace with your custom gateway's service name
  #         port:
  #           number: 80  # Port of your custom gateway service
